# cpp-logger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cpp-logger.code-workspace  sizecalc.ods  test-stdostream-crash
benchmark/: picobench-direct.cpp  picobench-msg-compact-boost.cpp  picobench-msg-compact-circular.cpp  picobench-msg-compact.cpp  picobench-msg-variant-boost.cpp  picobench-msg-variant-circular.cpp  picobench-msg-variant.cpp
src/: ArrayMap.h  BanCopyMove.h  CmsisOsUtils.cpp  Log.cpp  Log.h  LogAppInterfaceAzureRtosMinimal.h  LogAppInterfaceFreeRtosMinimal.h  LogAppInterfaceStd.h  LogAtomicBuffers.h  LogCmsisSwo.h  LogConverterCustomCharacter.h  LogConverterCustomText.h  LogFreertosBlocking.cpp  LogFreertosBlocking.h  LogFreertosCmsisSwo.cpp  LogFreertosCmsisSwo.h  LogFreertosStmHal.h  LogMessageBase.h  LogMessageCompact.h  LogMessageVariant.h  LogNop.h  LogNumericSystem.h  LogQueueAzureRtos.h  LogQueueFreeRtos.h  LogQueueStdBoost.h  LogQueueStdBoost.h.etalon  LogQueueStdCircular.h  LogQueueVoid.h  LogSenderRos2.h  LogSenderStdOstream.h  LogSenderStmHalMinimal.h  LogSenderVoid.h  LogStdOstream.h  LogStdThreadOstream.cpp  LogStdThreadOstream.h  LogStmHal.h  LogStub.cpp  LogUtil.cpp  LogUtil.h  _ArrayMap.h  (+6 more)
test/: _test-freertosstmhal.cpp  _test-stdthreadostream.cpp  test-freertosminimal.cpp  test-sizes-atomic-stdostream-circular.cpp  test-sizes-atomic-stdostream.cpp  test-sizes-freertosminimal-float.cpp  test-sizes-freertosminimal-nofloat.cpp  test-sizes-stdthreadostream-boost.cpp  test-sizes-stdthreadostream-circular.cpp  test-sizes.cpp  (+5 more)
